Bug 417575 - Spectacle thinks that OBS Studio and VokoscreenNG screen recorders are not installed but they are
Summary: Spectacle thinks that OBS Studio and VokoscreenNG screen recorders are not in...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.86.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Jeremy Whiting
URL:
Keywords:
: 443716 462256 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-02-13 15:52 UTC by Patrick Silva
Modified: 2022-11-26 21:49 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.97
Sentry Crash Report:


Attachments
screen recording (967.08 KB, image/png)
2020-02-13 15:52 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-02-13 15:52:12 UTC
Created attachment 125959 [details]
screen recording

SUMMARY
"Tools" menu of Spectacle lists the screen recorders installed on the current system.
On my system Spectacle lists both "OBS Studio" and "VokoscreenNG"  as not installed despite they are installed. See the attached screenshot please.

STEPS TO REPRODUCE
1. install both OBS Studio and VokoscrenNG screen recorders 
2. open Spectacle, click on "Tools" button, hover over "Record Screen > More"
3. 

EXPECTED RESULT
Spectacle should correctly detect if OBS Studio or VokoscreenNG is installed

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.18.0
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Comment 1 Morbid 2020-02-17 19:05:32 UTC
Reproduced.
Button "Install" opens OBS' page in Discover which does see it as installed.

Operating System: Arch Linux 
KDE Plasma Version: 5.18.0
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Kernel Version: 5.5.4-zen1-1-zen
OS Type: 64-bit
Comment 2 Thiago Sueto 2020-11-13 03:31:12 UTC
Can confirm on current master with Spectacle 21.03.70 and vokoscreenNG 3.0.7.
Comment 3 PhobosK 2020-12-27 03:00:04 UTC
I can also confirm this on Gentoo with Spectacle 20.12.0 and both OBS Studio and  VokoscreenNG latest versions.
I tried replacing both of their .desktop original files with those that come with knewstuff (from /usr/share/kf5/kmoretools/presets-kmoretools/ ) but they still are reported as not installed.
Comment 4 Patrick Silva 2021-10-14 18:26:41 UTC
*** Bug 443716 has been marked as a duplicate of this bug. ***
Comment 5 Nicolas Fella 2021-10-15 13:01:45 UTC
Git commit acc712720aa6ca7c6f0bc82e6658a0564697e6e7 by Nicolas Fella, on behalf of Anthony Wang.
Committed on 15/10/2021 at 12:53.
Pushed by nicolasfella into branch 'master'.

Make sure that we query KService with lowercase desktop names since it seems that KService stores everything lowercase.

M  +1    -1    src/kmoretools/kmoretools.cpp

https://invent.kde.org/frameworks/knewstuff/commit/acc712720aa6ca7c6f0bc82e6658a0564697e6e7
Comment 6 Patrick Silva 2022-02-15 17:46:37 UTC
both obs and vokoscreenng from Arch repos are installed on my system and this bug persists.

Operating System: Arch Linux
KDE Plasma Version: 5.24.1
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 7 PhobosK 2022-02-20 18:44:09 UTC
I can also confirm this for openSUSE Tumbleweed with the original knewstuff 5.90.0 where the upstream fix (toLower()) is applied and no other distro specific patches are applied.
Both OBS and vokoscreenng are installed on the system and this bug persists.

Operating System: openSUSE Tumbleweed Linux
KDE Plasma Version: 5.24.1
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Graphics Platform: xcb
Comment 8 djsapsan@gmail.com 2022-05-23 16:25:43 UTC
Confirm too on:
Operating System: Kubuntu 22.04
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3
Kernel Version: 5.15.0-30-generic (64-bit)
Graphics Platform: X11
Comment 9 sayan 2022-05-24 09:02:00 UTC
Confirming this bug on:
Operating System: Manjaro Linux
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.93.0
Qt Version: 5.15.3
Kernel Version: 5.17.6-1-MANJARO (64-bit)
Graphics Platform: X11
Comment 10 PhobosK 2022-05-24 16:36:21 UTC
Confirming that this still persists also on openSUSE Tumbleweed:

Operating System: openSUSE Tumbleweed Linux
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.2
Kernel Version: 5.17.7-1-default (64-bit)
Graphics Platform: X11
Comment 11 Bug Janitor Service 2022-07-20 09:11:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/194
Comment 12 Nicolas Fella 2022-07-20 09:29:37 UTC
Git commit 6b941efee626479c4820e622524c80fa047f6aa4 by Nicolas Fella.
Committed on 20/07/2022 at 09:11.
Pushed by nicolasfella into branch 'master'.

[kmoretools] Don't lowercase the desktop entry name

At some point KService::desktopEntryName was always lowercase

We added toLower() here to accommodate for that and fix the comparison

However, later KService got changed to preserve the case from the file name so we need to remove the toLower again

M  +1    -1    src/kmoretools/kmoretools.cpp

https://invent.kde.org/frameworks/knewstuff/commit/6b941efee626479c4820e622524c80fa047f6aa4
Comment 13 Patrick Silva 2022-08-31 12:47:58 UTC
I have VokoscreenNG from flathub installed on neon unstable, but Spectacle is still thinking it is not installed.

Operating System: Arch Linux
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Graphics Platform: Wayland
Comment 14 Patrick Silva 2022-08-31 13:47:34 UTC
ops, here are the correct versions.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.5
Graphics Platform: Wayland
Comment 15 Nate Graham 2022-09-01 13:05:12 UTC
I can't reproduce the issue anymore with current git master as long as VokoScreenNG is installed from my distro repos. If I install it from FlatHub, I can reproduce the issue.

I think this is a different issue with the KMoreTools system not detecting installed status correctly for non-distro-packaged apps. Let's get a new bug report for that.
Comment 16 Patrick Silva 2022-11-26 21:49:38 UTC
*** Bug 462256 has been marked as a duplicate of this bug. ***