Make sure that we query KService with lowercase desktop names since it seems that KService stores everything lowercase.

BUG: 417575