src/kmoretools/kmoretools.cpp
@@ -119,7 +119,7 @@ KMoreToolsService *KMoreTools::registerServiceByDesktopEntryName(const QString &
     bool isInstalled = false;
     KService::Ptr installedService;
     if (serviceLocatingMode == KMoreTools::ServiceLocatingMode_Default) { // == default behaviour: search for installed services
-        installedService = KService::serviceByDesktopName(desktopEntryName);
+        installedService = KService::serviceByDesktopName(desktopEntryName.toLower());
         isInstalled = installedService != nullptr;
     } else if (serviceLocatingMode == KMoreTools::ServiceLocatingMode_ByProvidedExecLine) { // only use provided kmt-desktopfile:
         if (!isKmtDesktopfileProvided) {
